# DBoW2

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  package.xml
.cmake/: FindDLib.cmake
DBoW2/: DBoW2.h  FBrief.cpp  FBrief.h  Makefile  TemplatedDatabase.h
createVoc/: createCNNvoc.cpp  createSURFvoc.cpp
demo/: demo.cpp  demoSift.cpp  testVocCreation.cpp
demo/cv/: demo.cpp
demo/pc/: demo.cpp
demo/pc/pointclouds/: kitti_00_001554.pcd  kitti_00_004534.pcd  oxford_270.pcd  oxford_456.pcd
include/DBoW2/: DBoW2.h  FBrief.h  FCNN.h  FORB.h  FSift.h  FSurf64.h  TemplatedDatabase.h  TemplatedVocabulary.h  TemplatedVocabulary_ORB_SLAM.h
include/TDBoW/: BowVector.h  CVBridge.h  FeatureVector.h  IndexedFile.h  PCBridge.h  QueryResults.h  ScoringObject.h  SpinLock.h  TDBoW.h  TemplatedDatabase.hpp  TemplatedDescriptor.hpp  TemplatedKMeans.hpp  TemplatedVocabulary.hpp  traits.h
libs/quicklz/: quicklz.c  quicklz.h
src/: BowVector.cpp  BowVector.h  CMakeLists.txt  DBoW2.cmake.in  DBoW2.h  Database.cpp  Database.h  DescManip.cpp  DescManip.h  FBrief.cpp  FCNN.cpp  FORB.cpp  FSift.cpp  FSurf64.cpp  FeatureVector.cpp  FeatureVector.h  QueryResults.cpp  QueryResults.h  ScoringObject.cpp  ScoringObject.h  SpinLock.cpp  TDBoW.cmake.in  Vocabulary.cpp  Vocabulary.h
utils/: CMakeLists.txt  demo.cpp  demo_general.cpp
